
VERSION 0.8.1cvs
================

2005-12-18  Vincent Richard  <vincent@vincent-richard.net>

 * IMAPParser.hpp: compatibility bugs + enhanced debugging trace.

2005-12-04  Vincent Richard  <vincent@vincent-richard.net>

 * exception.{hpp|cpp}: fixed segfault in destructor when destroying
   an exception chain with more than 2 elements (thanks to Bertrand
   Benoit).

 * posixChildProcess.cpp: fixed a bug in argument vector; last argument
   was not NULL (thanks to Bertrand Benoit).

2005-11-27  Vincent Richard  <vincent@vincent-richard.net>

 * maildirUtils.cpp: fixed problem with ':' in filename on Windows
   platform (thanks to Benjamin Biron).

 * random.cpp: fixed buffer overrun in random::getString (thanks
   to Benjamin Biron).

2005-11-07  Vincent Richard  <vincent@vincent-richard.net>

 * SMTPTransport.cpp: fixed bug in disconnect() when authentication is
   not needed (thanks to Benjamin Biron).

 * dateTime.cpp: gmtime() and localtime() are reentrant when using
   MS C runtime library (MinGW/MSVC).

2005-11-06  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.8.1.


VERSION 0.8.0
=============

2005-11-06  Vincent Richard  <vincent@vincent-richard.net>

 * First version of the VMime Book.

2005-11-05  Vincent Richard  <vincent@vincent-richard.net>

 * Refactored header field values and parameters.

2005-10-19  Vincent Richard  <vincent@vincent-richard.net>

 * charsetConverter.{hpp|cpp}: new object 'charsetConverter' for converting
   between charsets (code moved from static functions in 'charset' class).

 * Added 'charsetFilteredOutputStream': provide charset conversion while
   writing to an output stream.

2005-10-16  Vincent Richard  <vincent@vincent-richard.net>

 * SConstruct: fixed compilation problems on FreeBSD (thanks to Xin LI).

2005-10-13  Vincent Richard  <vincent@vincent-richard.net>

 * attachmentHelper.{hpp|cpp}: the attachmentHelper allows listing all
   attachments in a message, as well as adding new attachments.