@@ -2,6 +2,11 @@
 VERSION 0.8.1cvs
 ================
 
+2005-12-26  Vincent Richard  <vincent@vincent-richard.net>
+
+ * posixSocket.cpp: use getaddrinfo() if available. This should bring
+   thread-safe DNS resolution and IPv6 support.
+
 2005-12-18  Vincent Richard  <vincent@vincent-richard.net>
 
  * IMAPParser.hpp: compatibility bugs + enhanced debugging trace.
